Account joining and PrincipalUserEntityRefresherFromDBFilter.

--- a/src/main/resources/templates/loginSuccess.html
+++ b/src/main/resources/templates/loginSuccess.html
@@ -13,6 +13,8 @@
     </div>
 </h3>
 
+<a href="/account/joinOther">Join this account with another one</a>
+
 <form th:action="${const.logoutUrl}" method="post">
     <input type="submit" value="Kilépés">
 </form>
