--- a/src/main/resources/templates/loginSuccess.html
+++ b/src/main/resources/templates/loginSuccess.html
@@ -9,7 +9,7 @@
 <body>
 <h3>
     <div class="label label-info">
-        Welcome, <span th:text="${name}">user</span>!
+        Welcome, <span th:text="${name}">userAcc</span>!
     </div>
 </h3>
 
