Renaming base package.

--- a/src/main/resources/templates/account/joinOther.html
+++ b/src/main/resources/templates/account/joinOther.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--/*@thymesVar id="existingInitiation" type="com.labosch.csillagtura.server.entity.AccountJoinInitiation"*/-->
-<!--/*@thymesVar id="waitingForApprovalInitiations" type="java.util.Set<com.labosch.csillagtura.server.entity.AccountJoinInitiation>"*/-->
+<!--/*@thymesVar id="existingInitiation" type="com.laboschcst.server.entity.AccountJoinInitiation"*/-->
+<!--/*@thymesVar id="waitingForApprovalInitiations" type="java.util.Set<com.laboschcst.server.entity.AccountJoinInitiation>"*/-->
 <head>
     <meta charset="UTF-8">
     <title>Join accounts</title>
