Changes to be able to run on kubernetes.

--- a/src/main/resources/templates/account/joinOther.html
+++ b/src/main/resources/templates/account/joinOther.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
 </head>
 <body>
+<div th:replace="fragments/includeTest.html"></div>
 
 <div th:if="${initiationStatus == 'success'}">
     <h3>Success</h3>
