--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div th:replace="/fragments/loginOptions.html"></div>
+<div th:replace="fragments/loginOptions.html"></div>
 
 </body>
 </html>
