Flipped join flow

--- a/src/main/resources/templates/mail/fragments/signature.html
+++ b/src/main/resources/templates/mail/fragments/signature.html
@@ -4,7 +4,7 @@
         <tr>
             <td style="width:140px; padding:0; text-align:center; vertical-align:middle;" width="140" valign="middle">
                 <img alt="photograph" style="width:100px; height:100px; border-radius:50px; border:0;"
-                     src="https://s12emagst.akamaized.net/products/5339/5338169/images/res_4f2bbf3f2d271408d4b38099dbd33f32_200x200_espe.jpg"
+                     src="https://laboschqpa-public.s3.pl-waw.scw.cloud/static/email/email-footer-image.jpg"
                      width="100" height="100" border="0">
             </td>
             <td style="border-bottom:2px solid; border-bottom-color:#ed5a24; padding:0; vertical-align:top;"
