--- a/src/main/resources/templates/mail/predefined/emailVerificationRequest.html
+++ b/src/main/resources/templates/mail/predefined/emailVerificationRequest.html
@@ -11,7 +11,7 @@
             text-align: center;
             font-size: 28px;
             padding: 20px;
-            width: 200px;
+            width: 280px;
             transition: all 0.3s;
             cursor: pointer;
             margin: 5px;
@@ -26,17 +26,17 @@
 </head>
 <body>
     <div th:remove="all">
-        <div th:fragment="mailSubject" th:remove="tag"> Üdv köztünk, brácsa </div>
+        <div th:fragment="mailSubject" th:remove="tag"> Asszed, tied ez a mail? </div>
     </div>
 
         <a th:href="${emailVerificationUrl}">
             <button class="button"
                     style="vertical-align:middle; width: 320px; margin: 0 auto; display: block">
-                <span> Irány az accountom </span>
+                <span> Igen, az enyém (klikk ide) </span>
             </button>
         </a>
 
-        <p>Ha a fenti gomb nem működne, nyisd meg ezt a linket a regisztráció folytatásához: <a th:href="${emailVerificationUrl}" th:text="${emailVerificationUrl}">asd</a></p>
+        <p>Ha a fenti gomb nem működne, nyisd meg ezt a linket az e-mail címed megerősítéséhez: <a th:href="${emailVerificationUrl}" th:text="${emailVerificationUrl}">asd</a></p>
 
     <div th:replace="mail/fragments/signature.html"></div>
 </body>
