mail signature update

--- a/src/main/resources/templates/mail/fragments/signature.html
+++ b/src/main/resources/templates/mail/fragments/signature.html
@@ -62,9 +62,9 @@
             </td>
             <td style="padding-top:6px; padding-bottom:0; padding-left:0; padding-right:0; vertical-align:middle;"
                 valign="middle">
-                <a href="http://qpa.sch.bme.hu" target="_blank" rel="noopener" style=" text-decoration:none;">
+                <a href="https://schq.party" target="_blank" rel="noopener" style=" text-decoration:none;">
                     <span style="color:#ed5a24; font-family:Verdana, sans-serif; font-size:10pt">
-                        <span style="color:#ed5a24; font-family:Verdana, sans-serif; font-size:10pt">qpa.sch.bme.hu</span>
+                        <span style="color:#ed5a24; font-family:Verdana, sans-serif; font-size:10pt">schq.party</span>
                     </span>
                 </a>
             </td>
