--- a/src/main/resources/templates/mail/fragments/signature.html
+++ b/src/main/resources/templates/mail/fragments/signature.html
@@ -4,7 +4,7 @@
         <tr>
             <td style="width:140px; padding:0; text-align:center; vertical-align:middle;" width="140" valign="middle">
                 <img alt="photograph" style="width:100px; height:100px; border-radius:50px; border:0;"
-                     src="https://laboschqpa-public.s3.pl-waw.scw.cloud/static/email/email-footer-image.jpg"
+                     src="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-1/p148x148/241041036_4265817946805191_4252183019902386188_n.png?_nc_cat=111&ccb=1-5&_nc_sid=1eb0c7&_nc_ohc=9Ym82_o1gssAX-L6ZyM&_nc_ht=scontent-vie1-1.xx&oh=8933ad1b97d5d863e580222f5474dd63&oe=61574D78"
                      width="100" height="100" border="0">
             </td>
             <td style="border-bottom:2px solid; border-bottom-color:#ed5a24; padding:0; vertical-align:top;"
